test/negative_cases/rubbish.orderly
# now ladies and gentlemen, this is rubbish:
string;
rubbish;
